# c7-cli

./: CLAUDE.md  LICENSE  README.md  USAGE.md  lefthook.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
context7_cli/: __init__.py  cli.py  mcp_client.py
examples/: basic_usage.py  batch_fetch.py
src/c7_cli/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_integration.py  test_version.py
