[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context7-cli"
version = "0.1.0"
description = "CLI frontend for Context7 MCP server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Context7 CLI Contributors"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "click>=8.0.0",
    "rich>=10.0.0",
]

[project.scripts]
c7 = "context7_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
]
